<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/onboarding2_image"
  tools:context=".fragment.onboarding.Onboarding2Fragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="100dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/onboarding2_description1"
      android:textColor="@color/white"
      android:textSize="40dp"
      android:textStyle="bold"
      android:textFontWeight="900"
      android:layout_marginTop="16dp"
      />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/onboarding2_description2"
      android:textColor="@color/white"
      android:textSize="60dp"
      android:textStyle="bold"
      android:textFontWeight="900"
      android:layout_marginTop="8dp"
      />

    <Button
      android:id="@+id/btn_next"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/onboarding2_button"
      android:textColor="@color/white"
      android:textSize="18dp"
      android:textStyle="bold"
      android:textFontWeight="900"
      android:layout_marginTop="48dp"
      android:paddingHorizontal="16dp"
      android:paddingVertical="18dp"
      />
  </LinearLayout>


</FrameLayout>